# NBA-Game-Prediction

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
.github/workflows/: build_docker_img.yml  test_application.yml
data/: config.yaml  nba_elo.csv  test_config.yaml
imgs/: cp_plots.sh
nba_game_prediction/: config.py  config_modul.py  elo_modul.py
nba_game_prediction/scripts/: collect_game_data.py  create_train_data.py  plot_train_data.py  scrape_web_data.py  train_model.py
reports/: beating_odd_makers.md  game_prediction.md  home_court_advantage.md  playoffs_regularSeason_differences.md
src/: testy.py
tests/: test_collect_game_data.py  test_config_modul.py  test_create_train_data.py  test_elo_modul.py  test_integration.py  test_plot_train_data.py  test_testy.py
tests/test_output/data/: nba_games.db
